--- a/my_first_game.ipynb
+++ b/my_first_game.ipynb
@@ -10,12 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pygame\n",
-      "  Downloading pygame-2.6.1-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
-      "Downloading pygame-2.6.1-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (14.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.0/14.0 MB\u001b[0m \u001b[31m31.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:02\u001b[0m00:17\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pygame\n",
-      "Successfully installed pygame-2.6.1\n",
+      "Requirement already satisfied: pygame in /home/mostafa/anaconda3/lib/python3.13/site-packages (2.6.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -45,10 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13c60730",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.5)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "pygame.init()\n",
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "bac051d6",
    "metadata": {},
    "outputs": [],
@@ -159,6 +163,12 @@
     "\n",
     "# Colors\n",
     "BLACK = (0, 0, 0)\n",
+    "WHITE = (255, 255, 255)\n",
+    "BLACK = (0, 0, 0)\n",
+    "BLUE = (0, 0, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "\n",
     "PLAYER_COLOR = (0, 128, 255)\n",
     "\n",
     "# 3. Create the window and clock\n",
